Adding the swagger api, api controller codes
